--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,22 @@
 ''
 __pycache__/
+.idea/
+htmlcov/
+logs/
 migrations/
 materialy/
-config.py
-products_info.py
-logs/
 venv/
-app.db
-.idea/
+
 *.xlsx
 *.db
 *.pdf
 *.csv
 *.bat
 *.sqlite3
-settings.py
+
+.coverage
+app.db
+config.py
+products_info.py
 supply_info/sp_modules/receiving_data.py
+settings.py
