--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ htmlcov/
 logs/
 migrations/
 materialy/
+public/
+tmp/
 venv/
+
 
 *.xlsx
 *.db
@@ -20,3 +23,5 @@ config.py
 products_info.py
 supply_info/sp_modules/receiving_data.py
 settings.py
+passenger_wsgi.py
+
