--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-coverage==5.0.3
-Django==3.1.9
-djangorestframework==3.11.2
-googletrans==2.4.0
-Markdown==3.2.1
-psycopg2==2.8.4
-reportlab==3.5.34
+coverage>=5.0.3
+Django>=3.1.9
+djangorestframework>=3.11.2
+googletrans>=2.4.0
+Markdown>=3.2.1
+psycopg2>=2.8.4
+reportlab>=3.5.34
