--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-coverage>=5.0.3
-Django>=3.1.9
-djangorestframework>=3.11.2
-googletrans>=2.4.0
-Markdown>=3.2.1
-psycopg2>=2.8.4
-reportlab>=3.5.34
+coverage==5.5
+Django==3.2.4
+djangorestframework==3.12.4
+googletrans==3.0.0
+Markdown==3.3.4
+psycopg2==2.8.6
+Pillow==8.0.0
+reportlab==3.5.53
